# GLSLAssembler

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE.txt  README.md
cmake/: GLSLAssemblerConfig.cmake
docs/: Doxyfile
docs/theme/: footer.html
include/glsl_assembler/: conf.h  module.h  module_graph.h  module_loader.h  simple_module_loader.h  string_utils.h
src/: module.cpp  module_graph.cpp  string_utils.cpp
test/: CMakeLists.txt
test/resources/shaders/comment/: assembled.glsl  main.glsl
test/resources/shaders/cycle/: a.glsl  b.glsl  main.glsl
test/resources/shaders/diamond/: a.glsl  assembled.glsl  b.glsl  c.glsl
test/resources/shaders/hoisting/: a.glsl  assembled.glsl  main.glsl
test/resources/shaders/relative/: assembled.glsl  main.glsl
test/resources/shaders/relative/utils/nested/: a.glsl
test/resources/shaders/simple/: assembled.glsl  b.glsl  main.glsl
test/src/: module_graph_test.cpp  simple_module_loader_test.cpp  string_utils_test.cpp
